--- a/Company.Angular/src/app/app.component.html
+++ b/Company.Angular/src/app/app.component.html
@@ -1,24 +1,36 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+<div class="container">
+  <h1>Company</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
-
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
-
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>
+  <div class="company-container">
+    <div class="company-form">
+      <form>
+        <div class="form-group">
+          <label for="">Company Name</label>
+          <input type="text" name="Name">
+        </div>
+        <div class="form-group">
+          <label for="">Company Country</label>
+          <input type="text" name="Country">
+        </div>
+        <div class="form-group">
+          <label for="">Company Address</label>
+          <input type="text" name="Address">
+        </div>
+        <div class="form-group">
+          <button>save</button>
+        </div>
+      </form>
+    </div>
+    <div class="company-grid">
+      <div class="company-row">
+        <div class="company-row-details">
+          <span>sudo</span>
+          <span>sdddudo</span>
+        </div>
+        <div class="company-row-action">
+          <a><i class="fa-solid fa-trash-can"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
