--- a/Company.Angular/src/app/app.component.html
+++ b/Company.Angular/src/app/app.component.html
@@ -3,18 +3,18 @@
 
   <div class="company-container">
     <div class="company-form">
-      <form>
+      <form #form="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="">Company Name</label>
-          <input type="text" name="Name">
+          <input type="text" name="Name" [(ngModel)]="company.Name">
         </div>
         <div class="form-group">
           <label for="">Company Country</label>
-          <input type="text" name="Country">
+          <input type="text" name="Country" [(ngModel)]="company.Country">
         </div>
         <div class="form-group">
           <label for="">Company Address</label>
-          <input type="text" name="Address">
+          <input type="text" name="Address" [(ngModel)]="company.Address">
         </div>
         <div class="form-group">
           <button>save</button>
@@ -25,13 +25,13 @@
 
       <div class="company-row" *ngFor="let company of companies">
         <div class="company-row-details">
-          <span>{{ company.Name }}</span>
-          <span>{{ company.Country }}</span>
-
+          <span>{{company.Name}}</span>
+          <span>{{company.Country}}</span>
+          <span>{{company.Address}}</span>
 
         </div>
         <div class="company-row-action">
-          <a><i class="fa-solid fa-trash-can"></i></a>
+          <a (click)="deleteCompany(company.Id)"><i class="fa-solid fa-trash-can"></i></a>
         </div>
       </div>
 
