--- a/Company.Angular/src/app/app.component.html
+++ b/Company.Angular/src/app/app.component.html
@@ -6,15 +6,15 @@
       <form #form="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="">Company Name</label>
-          <input type="text" name="Name" [(ngModel)]="company.Name">
+          <input type="text" name="name" [(ngModel)]="company.name">
         </div>
         <div class="form-group">
           <label for="">Company Country</label>
-          <input type="text" name="Country" [(ngModel)]="company.Country">
+          <input type="text" name="country" [(ngModel)]="company.country">
         </div>
         <div class="form-group">
           <label for="">Company Address</label>
-          <input type="text" name="Address" [(ngModel)]="company.Address">
+          <input type="text" name="address" [(ngModel)]="company.address">
         </div>
         <div class="form-group">
           <button>save</button>
@@ -23,15 +23,13 @@
     </div>
     <div class="company-grid">
 
-      <div class="company-row" *ngFor="let company of companies">
+      <div (click)="PopulateFormCompany(company)" class="company-row" *ngFor="let company of companies">
         <div class="company-row-details">
-          <span>{{company.Name}}</span>
-          <span>{{company.Country}}</span>
-          <span>{{company.Address}}</span>
+          <span>{{ company.name }}</span>|<span>{{ company.country }}</span>|<span>{{ company.address }}</span>
 
         </div>
         <div class="company-row-action">
-          <a (click)="deleteCompany(company.Id)"><i class="fa-solid fa-trash-can"></i></a>
+          <a (click)="deleteCompany(company.id)"><i class="fa-solid fa-trash-can"></i></a>
         </div>
       </div>
 
